# input-overlay

./: .gitignore  CNAME  README.md  index.html  style.css
.github/workflows/: _build.yml  build-nightly.yml  build-prerelease.yml  build.yml  nightly.yml  release.yml
scripts/: consts.js  main.js  utils.js
scripts/libs/: AnalogSense.js
scripts/services/: configurator.js  gamepadManager.js  layoutParser.js  overlay.js  overlayVisualiser.js  urlManager.js  webSocketManager.js
ws-server/: Cargo.toml  admin.manifest  input-overlay-ws.py  requirements.txt
ws-server-legacy/: admin.manifest
ws-server-legacy/services/: http_server.py  logger.py
ws-server/common/: Cargo.toml
ws-server/common/src/: lib.rs  ws_server.rs
ws-server/common/src/services/: config.rs  consts.rs  mod.rs
ws-server/common/src/services/linux/: evdev_input.rs  mod.rs
ws-server/common/src/services/windows/: raw_input.rs
ws-server/obs-plugin/: Cargo.toml
ws-server/obs-plugin/src/: lib.rs  obs.rs  settings_ui.rs
ws-server/services/: analog.py  consts.py  dialogs.py  rawinput.py  settings.py  tray.py  utils.py
ws-server/services/windows/: input_rawinputbuffer.py
ws-server/src/: index.html  main.js  post-update.html  styles.css  update.html  update.js
ws-server/src-tauri/: Cargo.toml  tauri.conf.json
ws-server/src-tauri/src/: lib.rs  ws_server.rs
ws-server/src-tauri/src/services/: analog.rs  consts.rs  mod.rs  updater.rs
ws-server/src-tauri/src/services/linux/: evdev_input.rs  updater.rs
ws-server/src-tauri/src/services/windows/: autostart.rs  raw_input.rs  updater.rs
ws-server/standalone/src/: index.html  main.js  post-update.js  update.js
ws-server/standalone/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ws-server/standalone/src-tauri/capabilities/: default.json
ws-server/standalone/src-tauri/src/: lib.rs
ws-server/standalone/src-tauri/src/services/: mod.rs
(+2 files in other folders)
