[package]
name = "io-ws-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", features = ["linux-static-hidraw"] }
evdev = "0.12"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
hidapi = "2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
